# simd-comment

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/simdcomment/: avx512.cpp  avx512.hpp  scalar.cpp  scalar.hpp
tests/: CMakeLists.txt  main.cpp
